Fix Bug With Overflow-Scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   background-color: #0f1b21;
+  overflow: hidden;
 }
